完成计算器

--- a/style.css
+++ b/style.css
@@ -1,27 +1,56 @@
+*{
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+body{
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .calculator{
   display: inline-block;
-  
+  border: 1px solid #34363B;
 }
 .calculator .button {
-  height: 3em;
-  width: 3em;
+  width: 56px;
+  height: 47px;
+  margin: -1px;
+  font-size:17px;
+  border: 1px solid #34363B;
+  background-color: #8A8B8D;
+  color: #fff;
+  outline: none;
 }
 
+.calculator .button:active{
+  background-color: #B9B9BA;
+}
+
+.calculator .row button:last-child{
+  background-color: #FF9F0A;
+}
+.calculator .row button:last-child:active{
+  background-color: #CB7D05;
+}
 .calculator .button.text-Clear {
-  width: 9em;
+  width: 164px;
 }
 
 .calculator .button.text-0 {
-  width: 6em;
+  width: 110px;
 }
 
 .calculator .output {
-  height: 3em;
-  border: 1px solid #ddd;
+  height: 65px;
+  background-color: #38393E;
   position: relative;
 }
 .calculator .output span{
   position: absolute;
-  right: .2em;
-  bottom: .2em;
+  right: 16px;
+  bottom: 0px;
+  color: #fff;
+  font-size: 36px;
 }
